--- a/api/package.json
+++ b/api/package.json
@@ -3,8 +3,16 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@react-email/components": "^0.3.2",
     "@redwoodjs/api": "8.0.0",
     "@redwoodjs/auth-dbauth-api": "8.0.0",
-    "@redwoodjs/graphql-server": "8.0.0"
+    "@redwoodjs/graphql-server": "8.0.0",
+    "@redwoodjs/mailer-core": "8.0.0",
+    "@redwoodjs/mailer-handler-nodemailer": "8.0.0",
+    "@redwoodjs/mailer-renderer-react-email": "8.0.0"
+  },
+  "devDependencies": {
+    "@redwoodjs/mailer-handler-in-memory": "8.0.0",
+    "@redwoodjs/mailer-handler-studio": "8.0.0"
   }
 }
