--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "devDependencies": {
     "@redwoodjs/core": "8.0.0",
-    "@redwoodjs/project-config": "8.0.0"
+    "@redwoodjs/project-config": "8.0.0",
+    "@redwoodjs/realtime": "8.0.0",
+    "@redwoodjs/studio": "12"
   },
   "eslintConfig": {
     "extends": "@redwoodjs/eslint-config",
